--- a/json-tagger-api.csproj
+++ b/json-tagger-api.csproj
@@ -6,10 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.3" />
   </ItemGroup>
+
+  <PropertyGroup>
+      <Nullable>enable</Nullable>
+  </PropertyGroup>
 
 </Project>
