Add DB query logging in debug; API search

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,11 +14,12 @@
             "args": [],
             "cwd": "${workspaceFolder}",
             "stopAtEntry": false,
-            // Enable launching a web browser when ASP.NET Core starts. For more information: https://aka.ms/VSCode-CS-LaunchJson-WebBrowser
-            "serverReadyAction": {
-                "action": "openExternally",
-                "pattern": "^\\s*Now listening on:\\s+(https?://\\S+)"
-            },
+            // // Enable launching a web browser when ASP.NET Core starts. For more information: https://aka.ms/VSCode-CS-LaunchJson-WebBrowser
+            // "serverReadyAction": {
+            //     "action": "openExternally",
+            //     "pattern": "^\\s*Now listening on:\\s+https?://\\S+",
+            //     "uriFormat": "https://localhost:5001/filelist"
+            // },
             "env": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
             },
